Allow the user to specify FTP credentials per branch
The ftpdata file format has changed: each section is named [branch]
instead of [ftp].
There is no way to obtain the previous behavior with this
implementation: each branch has to have a section in the ftpdata file,
otherwise, the user will be asked for the credential through stdin

--- a/README
+++ b/README
@@ -12,12 +12,19 @@ Usage: python git-ftp.py
 
 You can place FTP credentials in .git/ftpdata, as such:
 
-[ftp]
+[master]
 username=me
 password=s00perP4zzw0rd
 hostname=ftp.hostname.com
 remotepath=/htdocs
-repository=/home/me/website
+
+[staging]
+username=me
+password=s00perP4zzw0rd
+hostname=ftp.hostname.com
+remotepath=/htdocs/staging
+
+Each section corresponds to a git branch.
 
 License:
 
